[package]
name = "grab-xkcd"
version = "0.1.0"
authors = ["Tyler Oalman <tyleroalman@gmail.com>"]
edition = "2018"
repository = "https://github.com/Phantom217/grab-xkcd"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "3.0.0-beta.1"
anyhow = "1.0.31"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
reqwest = { version = "0.10.6", features = ["blocking"] }
url = "2.1.1"
